# bitcoin-transfer

./: .env.example  .gitignore  Cargo.toml  README.md  aws_kms_policy.json  btc_bridge.service  build.sh  create_aws_keys.py  create_google_keys.py  db_scheme.json  endpoints.txt  get_aws_keys.py  get_google_keys.py  start.sh  test.ron  test_btc_multisig.sh  test_btc_transfer.sh  test_get_address.sh
docs/: API.md  AWS CLI setup.md  Backup items.md  Google CLI setup.md  db_scheme.json  libmongocrypt setup.md
multisig_scripts/: check_dependencies.sh  generate_keys.sh  multisig_address.sh  onesig.sh  secondsig.sh  send.sh
multisig_scripts/btc_catchup/: Cargo.toml
multisig_scripts/btc_catchup/src/: domichain.rs  get_btc_transactions.rs  get_domi_transactions.rs  lib.rs  mempool.rs
multisig_scripts/btc_mainnet_3of4_scripts/: generate_keys.sh  multisig_address.sh  onesig.sh  pub_aws_kms_01.json  pub_google_kms_03.json  secondsig.sh  send.sh  test_multisig_and_send.sh  thirdsig.sh
multisig_scripts/btc_mainnet_scripts/: generate_keys.sh  multisig_address.sh  onesig.sh  secondsig.sh  send.sh
multisig_scripts/combined-mint/: .gitignore  Cargo.toml
multisig_scripts/combined-mint/src/: main.rs
multisig_scripts/kms_sign/: Cargo.toml
multisig_scripts/kms_sign/src/: lib.rs
src/: balance_by_addresses.rs  bdk_cli.rs  bdk_cli_struct.rs  catchup.rs  db.rs  deprecated.rs  domichain.rs  draft_spl_token_cli_lib.rs  estimate_fee.rs  get_address.rs  get_mint_info.rs  log_progress.rs  main.rs  mempool.rs  mint_token.rs  sign_multisig_tx.rs  spl_token.rs  spl_token_cli_lib.rs  utils.rs  watch_addresses.rs  watch_tx.rs
