[package]
name = "bitcoin_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
bdk = { version = "0.29.0", features = ["all-keys", "key-value-db", "rpc"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = { version = "2.8.2", features = ["in-use-encryption-unstable"] }

domichain-program = { path = "../domichain/sdk/program" }
clap = { version = "4.5.8", features = ["derive", "env"] }
ron = { git = "https://github.com/ron-rs/ron.git" }
tower-http = { version = "0.5.2", features = ["cors"] }

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.15.0"
base64 = "0.22.0"
crypto-hash = "0.3.4"
env-file-reader = "0.3.0"
toml = "0.8.11"
home = "0.5.9"
x509-certificate = "0.18.0"
openssl = "0.10.64"
asn1 = "0.16.1"
hex = "0.4.3"
kms_sign = { path = "multisig_scripts/kms_sign" }
futures = "0.3.30"
rand = "0.8.5"
shellexpand = "3.1.0"
sha2 = "0.10.8"
primitive-types = "0.12.2"
bitcoin = { path = "multisig_scripts/rust-bitcoin", version = "0.29.2", features = ["serde", "base64", "rand"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
cached = { version = "0.52.0", features = ["async"] }

# spl-token-cli = { path = "../domichain-program-library/token/cli/src/main.rs" }

# For: src/spl_token_cli_lib.rs
# domichain-sdk = { path = "../domichain/sdk" }
# spl-token = { version = "3.5", path = "../domichain-program-library/token/program", features = [
#     "no-entrypoint",
# ] }
# spl-token-2022 = { version = "0.6", path = "../domichain-program-library/token/program-2022", features = [
#     "no-entrypoint",
# ] }
# spl-token-btci = { version = "3.5", path = "../domichain-program-library/token/program-btci", features = [
#     "no-entrypoint",
# ] }
# spl-token-client = { version = "0.4", path = "../domichain-program-library/token/client" }
# spl-associated-token-account = { version = "1.1", path = "../domichain-program-library/associated-token-account/program", features = [
#     "no-entrypoint",
# ] }
# spl-memo = { version = "3.0.1", path = "../domichain-program-library/memo/program", features = [
#     "no-entrypoint",
# ] }