[package]
name = "btc_catchup"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.120"
domichain-sdk = { path = "../../../domichain/sdk" }
cached = { version = "0.53.0", features = ["async", "disk_store"] }
