[package]
name = "combined-mint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1.14.1", features = ["full"] }
serde_json = "1.0.116"
domichain-sdk = { path = "../../../domichain/sdk" }
domichain-client = { path = "../../../domichain/client" }
spl-token = { version = "3.5", path = "../../../domichain-program-library/token/program", features = [
    "no-entrypoint",
] }
spl-token-client = { version = "0.4", path = "../../../domichain-program-library/token/client" }
